Proofreading and Imagemagick

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -17,6 +17,14 @@
   pages = {150}
 }
 
+@book{ Zeldman2010,
+   author = {Jeffrey Zeldman and Ethan Marcotte},
+   title = {Designing with web standards},
+   year = {2010},
+   publisher = {New Riders},
+   edition = {3rd Ed.}
+ }
+
 @MISC{Spiegel-Online2011,
   author = {Spiegel-Online},
   title = {Streit über VroniPlag-Gründer "Verprellter Liebhaber oder SPD-Mitglied,
