--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -1,7 +1,5 @@
 \begin{appendix}
 
-\chapter{Minutes}
-
 \chapter{Logged Time As Of March 11, 2012}
 
 The following tables are some example reports generated from the logged time in Redmine. To find the most recent version
@@ -11,7 +9,6 @@ page.
 % should be updated later on, now simply to make sure it works
 % generate various reports in redmine and export as csv
 % don't forget to escape special characters like _ or # in the input .csv, e. g. \_ or \#
-
 
 \DTLloaddb{overview}{data/timelog-overview.csv}
 \begin{table}[htbp]
@@ -37,7 +34,7 @@ page.
 
 \end{landscape}
 
-\chapter{Mockups}
+\chapter{Mockups}\label{appendix:mockups}
 
 \section{Hand-Drawn}
 
@@ -113,7 +110,5 @@ page.
   \caption{Mockup – New report – digitalized }
   \label{fig:5newReportMockup}
 \end{figure}
-
-
 
 \end{appendix}
