--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -1,7 +1,8 @@
 % I'm not totally sure, if this should be described together or seperate, but somehow or SCRUM approach and the Redmine
 % stuff should be mentioned somewhere before the developing part and as this are probably only three pages or somethin
 % it probably could be integrated here
-\chapter{Project Workflow and  Requirements}\label{chap:systemRequirements}
+\chapter{Project Workflow and  Requirements}
+\label{chap:systemRequirements}
 
 First of all, we've got a confession to make: Unplagged is like a big playground of new 
 workflows and technologies for us, as we are aiming to incorporate 
@@ -102,10 +103,42 @@ example from the VroniPlag group, which can be reached through their IRC channel
 
 \subsection{Team Meetings}
 
-The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting.
+The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting. Even our meetings weren't daily, it was still a meeting which was respecting the other characteristics of a \textit{Daily Scrum}. Each team member used to say what he did for the last week and what he attends to do for the next week. These meetings were good occassions to verify the evolution of the project and determine the possilbe bottlenecks as soon as possible. 
 
+\minisec{}
+Our projectteam was doing the meetings every monday for at least one hour. Most of the times we met at the same place, if due to appointment collisions we couldn't manage to meet in persons, we met in Skype. So we never used to skip the weekly meeting.
+\minisec{}
+For each meeting that we held someone was responsible for writing the protocol about the meeting. For each protocol a new wiki-page was created to our \href{http://www.redmine.org/}{Redmine}. To put the protocols to our \href{http://www.redmine.org/}{Redmine} was really helpful for the teamwork. So everybody had access to it and could if necessary have a look on the decisions which were made in the past.
+\minisec{}
+During the meetings at least these following points have been discussed:
+\minisec{}
+\begin{itemize}
+\item What was done last week. 
+\item What will be done for the next week.
+\item Organisation issues.
+\item External dependencies issues.
+\item Problems encountered last week.
+\item Further questions.
+\end{itemize}
+\minisec{}
+All the protocols which were made during the phase one are available on the appendix \ref{ch:minutes} (page number \pageref{ch:minutes}).
 
 \section{Target Group}
+
+The main goal of the application is to support the detection of plagiarism. So the target group is composed of people who want to correct documents and be sure that this does not contain any plagiarism.
+\minisec{}
+The following list is showing people who could be interested in using this application:
+\minisec{}
+\begin{itemize}
+\item Professors 
+\item Teachers
+\item Academics
+\item Instructors
+\item Tutors
+\item ...
+\end{itemize}
+\minisec{}
+This people are mostly not it-specialists, so it is important to focus on it during the development of the application. This has an influence on the way they will use the application: it must be easy and naturally to use, the results must be easy to understand and reliable.
 
 \section{User roles}
 %This is copied from the wiki, so probably copy back there when the text is finished
@@ -128,6 +161,17 @@ An admin owns all permissions, such as user administration or project administra
 \end{description}
 
 \section{Basic functionalities}
+\subsection{Register}
+\subsection{Sign up}
+\subsection{Files overview}
+\subsubsection{Set target}
+\subsubsection{Parse}
+\subsubsection{Download}
+\subsubsection{Delete}
+\subsubsection{View picture}
+\subsubsection{Fileextension icons}
+\subsection{Parsed files overview}
+\subsection{Edit profile}
 
 \section{Document Parser}
 
