work in progress latex

--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -128,6 +128,25 @@ An admin owns all permissions, such as user administration or project administra
 \end{description}
 
 \section{Basic functionalities}
+\subsection{Register}
+some test
+\begin{figure}[!ht]
+  \centering
+    \includegraphics[width=0.97\textwidth]{images/init-psd.png}
+  \caption{Initial Screen PSD}
+  \label{fig:initialScreenPsd}
+\end{figure}
+\subsection{Sign up}
+\subsection{Files overview}
+\subsubsection{File upload}
+\subsubsection{Set target}
+\subsubsection{Parse}
+\subsubsection{Download}
+\subsubsection{Delete}
+\subsubsection{View picture}
+\subsubsection{Fileextension icons}
+\subsection{Parsed files overview}
+\subsection{Edit profile}
 
 \section{Document Parser}
 
@@ -137,3 +156,7 @@ An admin owns all permissions, such as user administration or project administra
 
 %Perhaps better on the way for every part?
 \section{Use Cases}
+The following diagramms are so called uml use case diagramms. The use cases are ment to visualize the interaction between the user and the system.
+\minisec{}
+
+
