Proofreading, fixing some links

--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -17,7 +17,8 @@
 \usepackage[babel]{csquotes}
 \usepackage{microtype}
 
-\usepackage[pdfborder={0 0 0}, breaklinks]{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+\usepackage[pdfborder={0 0 0}, breaklinks, pdftex]{hyperref}
 \hypersetup{colorlinks, linkcolor={Blue}, citecolor={Blue}, urlcolor={Blue}}
 \urlstyle{same}
 
