--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -59,7 +59,7 @@ in our small group at this point, the hassle of filling in all the tickets seeme
 will be fixed in the near future, so that you are able to see where the development is going.
 
 Currently we are working mostly with four week long sprints, to overcome the problem that we are not working fulltime
-on the tickets, which is something that scrum normally assumes. 
+on the tickets, which is something that scrum normally assumes with its two week long sprints.
 
 To have a nice statistical overview and more planning security for the \enquote{scrums}, it is required to log the time 
 that was spent on an issue within redmine.
@@ -102,7 +102,16 @@ example from the VroniPlag group, which can be reached through their IRC channel
 
 \subsection{Team Meetings}
 
-The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting.
+The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting, where we sit down
+and evaluate the current state of the sprint and estimate the time that will be needed for the user stories at hand.
+Sometimes we complement this also with meetings over Skype and TeamViewer to enforce a little bit more communication and 
+figure out some problems within the actual working environments.
+
+This is probably the most problematic aspect of our version of Scrum, because the daily frequency of the meetings normally 
+helps to let everybody know more about necessary changes in the logic of previously discussed ideas and makes the process
+really agile. Sometimes this led to situations where team members developed unnecessary complicated, in a wrong direction
+or not compatible with each other, which only got noticed a week later.
+
 
 
 \section{Target Group}
