--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -1,34 +1,39 @@
 ﻿\chapter{A Plagiarism Primer}\label{chap:plagOverview}
 In this chapter we will give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are not already familiar with it.
 
-\section{Plagiarism definition} 
+\section{Plagiarism definition and history} 
+
+Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like "copying" and "borrowing" can disguise the seriousness of the offense:
+According to the Merriam-Webster Online Dictionary, to "plagiarize" means:
+
+\begin{itemize}
+    \item to steal and pass off (the ideas or words of another) as one's own
+    \item to use (another's production) without crediting the source
+    \item to commit literary theft
+    \item to present as new and original an idea or product derived from an existing source.
+\end{itemize} 
 
 
+%(siehe http://www.plagiarism.org/plag_article_what_is_plagiarism.html)
 
-%What is Plagiarism?
-%
-%Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like "copying" and "borrowing" can disguise the seriousness of the offense:
-%According to the Merriam-Webster Online Dictionary, to "plagiarize" means
-%
-%    to steal and pass off (the ideas or words of another) as one's own
-%    to use (another's production) without crediting the source
-%    to commit literary theft
-%    to present as new and original an idea or product derived from an existing source.
-%
-%In other words, plagiarism is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
-%But can words and ideas really be stolen?
-%
-%According to U.S. law, the answer is yes. The expression of original ideas is considered intellectual property, and is protected by copyright laws, just like original inventions. Almost all forms of expression fall under copyright protection as long as they are recorded in some way (such as a book or a computer file).
-%All of the following are considered plagiarism:
-%
-%    turning in someone else's work as your own
-%    copying words or ideas from someone else without giving credit
-%    failing to put a quotation in quotation marks
-%    giving incorrect information about the source of a quotation
-%    changing words but copying the sentence structure of a source without giving credit
-%    copying so many words or ideas from a source that it makes up the majority of your work, whether you give credit or not (see our section on "fair use" rules)
-%
-%Most cases of plagiarism can be avoided, however, by citing sources. Simply acknowledging that certain material has been borrowed, and providing your audience with the information necessary to find that source, is usually enough to prevent plagiarism. See our section on citation for more information on how to cite sources properly.
+In other words, plagiarism is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
+But can words and ideas really be stolen?
+
+According to U.S. law, the answer is yes. The expression of original ideas is considered intellectual property, and is protected by copyright laws, just like original inventions. Almost all forms of expression fall under copyright protection as long as they are recorded in some way (such as a book or a computer file).
+All of the following are considered plagiarism:
+
+\begin{itemize}
+   \item turning in someone else's work as your own
+   \item copying words or ideas from someone else without giving credit
+   \item failing to put a quotation in quotation marks
+  \item  giving incorrect information about the source of a quotation
+  \item  changing words but copying the sentence structure of a source without giving credit
+   \item copying so many words or ideas from a source that it makes up the majority of your work, whether you give credit or not (see our section on "fair use" rules)
+\end{itemize} 
+
+Most cases of plagiarism can be avoided, however, by citing sources. Simply acknowledging that certain material has been borrowed, and providing your audience with the information necessary to find that source, is usually enough to prevent plagiarism. See our section on citation for more information on how to cite sources properly.
+
+Plagiarism occurs when a student, with intent to deceive or with reckless disregard for proper scholarly procedures, presents any information, ideas or phrasing of another as if they were his/her own and/or does not give appropriate credit to the original source. Proper scholarly procedures require that all quoted material be identified by quotation marks or indentation on the page, and the source of information and ideas, if from another, must be identified and be attributed to that source. Students are responsible for learning proper scholarly procedures.
 %
 %---
 %Plagiarism and collusion in students' assessed work are issues of increasing con- cern to the academic community as a whole. By plagiarism we mean the sub mission of part or all of another person's work as if it were ones own, without the knowledge of the author, and with intention to deceive. Collusion, on the other hand is the submission of work as ones own when (at least some of) that work has been done partly or wholly by another person, and that other person is party to the deception.
@@ -37,7 +42,7 @@ In this chapter we will give a brief overview of the most important topics to ge
 %
 %----
 %
-%    Plagiarism occurs when a student, with intent to deceive or with reckless disregard for proper scholarly procedures, presents any information, ideas or phrasing of another as if they were his/her own and/or does not give appropriate credit to the original source. Proper scholarly procedures require that all quoted material be identified by quotation marks or indentation on the page, and the source of information and ideas, if from another, must be identified and be attributed to that source. Students are responsible for learning proper scholarly procedures.1
+
 %
 %This definition suggests that there are two kinds of plagiarism: one that is committed with the intent to deceive (intentional plagiarism) and one resulting from the disregard for proper scholarly procedures (unintentional plagiarism).
 %1The Duke Community Standard in Practice: A Guide for Undergraduates 2011-12, Pages 18 and 20.
@@ -97,7 +102,7 @@ In this chapter we will give a brief overview of the most important topics to ge
 %	Gesellschaftliche Probleme
 %	Universitaere Probleme
 %	
-%vroni-plag -- VroniPlag ist ein Wiki, d.h. jeder kann etwas beitragen. Und jeder, der etwas beitraegt, tut dies aus ganz persoenlichen Motiven. Es ist deshalb schwierig eine allgemeingueltige Antwort zu geben - trotzdem scheint bei vielen regelmaessigen VroniPlag Autoren eher die Sorge um die Wissenschaft im Vordergrund zu stehen und nicht parteipolitische Ueberlegungen. Siehe auch Frage zum Thema Motivation. 
+
 %
 %	
 	
@@ -247,7 +252,13 @@ We found out that the most practical way is to combine both approaches - the fir
 
 (Culwin, Fintan; Lancaster, Thomas (2001), "Plagiarism issues for higher education", Vine 31 (2): 36-41, doi:10.1108/03055720010804005)
 
+
+
+
 \newpage
+
+
+
 \subsection{Commercial software systems} 
 
  
@@ -262,16 +273,26 @@ We found out that the most practical way is to combine both approaches - the fir
 
 
 
-Several computer companys developed commercial software systems to faciliate the detection of plagiarism. They offer different terms of pricing and online as a service or offline programs. 
+Several computer companies developed commercial software systems to facilitate the detection of plagiarism. They offer different terms of pricing and online as a service or offline programs. 
 The software system compare digital content from the internet or different types of databases. 
 They seek for similarities, report suspicious parts and try to answer the question if the present text is a plagiarism or not.
 
 This chapter covers parts of the results of the big "Plagiarism Detection System Test 2010". 
 The following benchmarking was done by Prof. Debora Weber-Wulff at the University of Applied Sciences HTW Berlin and her plagiarism team in 2010. 
-The entire benchmarking includes 26 of the 47 available systems on the market and gives an overview of the strenghts and weaknesses of these systems in finding plagiarism.
+The entire benchmarking includes 26 of the 47 available systems on the market and gives an overview of the strengths and weaknesses of these systems in finding plagiarism.
 
 We used the top 5 "partially useful" software systems in this  benchmarking to overview the market and find the best usable features for our own system to simplify the daily work of plagiarism finders. 
+
+
+
+
+
+
+
 \newpage
+
+
+
 \subsubsection{PlagAware} 
  \begin{figure}[!h]
   \centering
